--- a/ejercicio.html
+++ b/ejercicio.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Día a Día</a>
-    <a href="dieta.html">Dieta</a>
+    <a href="dia.html">Día a Día</a>
+    <a href="dieta.html">Dieta</a> 
+    <a href="ejercicio.html">Ejercicio</a>
+    <a href="pnl.html">PNL</a>
   </nav>
 
   <section>
