--- a/pnl.html
+++ b/pnl.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
   <nav>
     <a href="dia.html">Día a Día</a>
     <a href="dieta.html">Dieta</a> 
@@ -20,20 +19,16 @@
       <thead>
         <tr>
           <th>Día</th>
-          <th>Comida 1</th>
-          <th>Comida 2</th>
-          <th>Comida 3</th>
-          <th>Comida 4</th>
-          <th>Comida 5</th>
-          <th>Comida 6</th>
+          <th>Mañana</th>
+          <th>Noche</th>
         </tr>
       </thead>
-      <tbody id="tabla-dieta"></tbody>
+      <tbody id="tabla-pnl"></tbody>
     </table>
-    <button id="guardar-dieta">Guardar Dieta</button>
+    <button id="guardar-pnl">Guardar Programación</button>
   </section>
 
   <script type="module" src="app.js"></script>
-  <script type="module" src="dieta.js"></script>
+  <script type="module" src="pnl.js"></script>
 </body>
 </html>
