--- a/dia.html
+++ b/dia.html
@@ -5,6 +5,7 @@
   <title>GoalFlouu</title>
   <link rel="icon" href="fuego.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <nav>
@@ -36,3 +37,4 @@
   <script type="module" src="dia.js"></script>
 </body>
 </html>
+
