--- a/dia.html
+++ b/dia.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <nav>
+    <a href="dia.html">Día a Día</a>
     <a href="dieta.html">Dieta</a> 
     <a href="ejercicio.html">Ejercicio</a>
     <a href="pnl.html">PNL</a>
