--- a/dia.html
+++ b/dia.html
@@ -6,10 +6,40 @@
   <link rel="icon" href="fuego.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* ===== Menú / Navegación ===== */
+    nav {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: #1f1f1f;
+      padding: 12px 0;
+      border-radius: 15px;
+      margin: 20px auto;
+      max-width: 950px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #ffcc33;
+      font-weight: 600;
+      padding: 12px 25px;
+      margin: 0 12px;
+      border-radius: 12px;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      background: linear-gradient(90deg, #ff9800, #ffcc33);
+      color: #121212;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
   <nav>
-    <a href="dia.html">Día a Día</a>
     <a href="dieta.html">Dieta</a> 
     <a href="ejercicio.html">Ejercicio</a>
     <a href="pnl.html">PNL</a>
@@ -36,6 +66,7 @@
   <script type="module" src="dia.js"></script>
 </body>
 </html>
+
 
 
 
