--- a/dieta.html
+++ b/dieta.html
@@ -5,6 +5,38 @@
   <title>GoalFlouu</title>
   <link rel="icon" href="fuego.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* ===== Menú / Navegación ===== */
+    nav {
+
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: #1f1f1f;
+      padding: 12px 0;
+      border-radius: 15px;
+      margin: 20px auto;
+      max-width: 950px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #ffcc33;
+      font-weight: 600;
+      padding: 12px 25px;
+      margin: 0 12px;
+      border-radius: 12px;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      background: linear-gradient(90deg, #ff9800, #ffcc33);
+      color: #121212;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
   
