--- a/dia.html
+++ b/dia.html
@@ -83,10 +83,18 @@
     <div id="dormir2"></div>
   </section>
 
-  <script type="module" src="app.js"></script>
-  <script type="module" src="dia.js"></script>
+  <section id="progreso-semanal">
+    <h2 class="center">Progreso semanal</h2>
+    <br>
+    <div id="chart"></div>
+  </section>
+
   <!-- Incluye la librería -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  
+  <script type="module" src="app.js"></script>
+  <script type="module" src="dia.js"></script>
   </script>
 
 </body>
