--- a/dia.html
+++ b/dia.html
@@ -48,6 +48,14 @@
     <a href="pnl.html">PNL</a>
   </nav>
 
+  <section id="progreso2">
+    <div class="progress-text" id="progressText">Día 0 de 365</div>
+    <div class="progress-container">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+    <div class="anchor-phrase">"Cada día suma. Estoy construyendo el cuerpo y la mente que ya son míos."</div>
+  </section>
+  
   <section id="progreso">
     <div class="lottie-wrapper">
       <div class="lottie-container" id="lottie-1"></div>
@@ -62,7 +70,6 @@
       <p class="lottie-label">Progreso mensual</p>
     </div>
   </section>
-
 
   <section id="plan-hoy">
     <h2>Lo que toca ahora!</h2>
@@ -92,7 +99,7 @@
   <!-- Incluye la librería -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-  
+
   <script type="module" src="app.js"></script>
   <script type="module" src="dia.js"></script>
   </script>
