--- a/dia.html
+++ b/dia.html
@@ -55,21 +55,31 @@
     </div>
     <div class="anchor-phrase">"Cada día suma. Estoy construyendo el cuerpo y la mente que ya son míos."</div>
   </section>
-  
-  <section id="progreso">
-    <div class="lottie-wrapper">
-      <div class="lottie-container" id="lottie-1"></div>
-      <p class="lottie-label">Progreso de hoy</p>
-    </div>
-    <div class="lottie-wrapper">
-      <div class="lottie-container" id="lottie-2"></div>
-      <p class="lottie-label">Progreso semanal</p>
-    </div>
-    <div class="lottie-wrapper">
-      <div class="lottie-container" id="lottie-3"></div>
-      <p class="lottie-label">Progreso mensual</p>
-    </div>
-  </section>
+
+  <div class="contenedor-horizontal">
+    <section id="progreso">
+      <div class="lottie-wrapper">
+        <div class="lottie-container" id="lottie-1"></div>
+        <p class="lottie-label">Hoy</p>
+      </div>
+      <div class="lottie-wrapper">
+        <div class="lottie-container" id="lottie-2"></div>
+        <p class="lottie-label">Semana</p>
+      </div>
+      <div class="lottie-wrapper">
+        <div class="lottie-container" id="lottie-3"></div>
+        <p class="lottie-label">Mes</p>
+      </div>
+    </section>
+
+    <section id="hidratacion">
+      <div class="lottie-wrapper">
+        <p class="lottie-label" id="litros"></p>
+        <div class="lottie-container" id="lottie-h"></div>
+        <p class="lottie-label">Hidratación</p>
+      </div>
+    </section>
+  </div>
 
   <section id="plan-hoy">
     <h2>Lo que toca ahora!</h2>
