--- a/dia.html
+++ b/dia.html
@@ -100,6 +100,23 @@
     <div id="dormir2"></div>
   </section>
 
+  <section id="mediciones">
+    <h2 class="center">Mediciones</h2>
+    <br>
+    <div class="mediciones-container">
+      <div class="mediv">
+        <p class="med-label">Peso:</p>
+        <input type="number" id="ps" name="peso" min="0" max="150" step="0.1" placeholder="0.0[kg]" class="input-tabla">
+      </div>
+      <div class="mediv">
+        <p class="med-label">Cintura:</p>
+        <input type="number" id="cn" name="cintura" min="0" max="200" step="0.1" placeholder="0.0[cm]"
+          class="input-tabla">
+      </div>
+    </div>
+    <button id="guardar-med">Guardar mediciones</button>
+  </section>
+
   <section id="progreso-semanal">
     <h2 class="center">Progreso semanal</h2>
     <br>
